fixed sorry, not found spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   min-height: 100vh;
   background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
@@ -46,6 +51,6 @@
   font-size: 20px;
 }
 
-.recipes {
+.recipes, .nothing-found {
   padding-top: 50px;
 }
